--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p style="size: 10rem; background-color: aqua;">Ey übrigens leah hat crush auf dich</p>
+    <p style="size: 10rem; background-color: aqua;">angelina hat crush auf dich </p>
 </body>
 </html>
