index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <p>This is a simple HTML document.</p>
-    <p>Welcome to the world of web development!</p>
-    <p>Hier ist ein bisschen Text, um die Seite zu füllen.</p>
-    <p>Hier ist ein bisschen Text, um die Seite zu füllen.</p>
-    <p>Hier ist ein bisschen Text, um die Seite zu füllen.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et architecto fuga consequatur soluta officia numquam vitae. Totam sequi cum, cupiditate sint obcaecati dicta, quis, accusamus autem delectus sapiente ratione tenetur?</p>
-    <p style="size: 10rem; background-color: aqua;">angelina hat crush auf dich </p>
-</body>
-</html>
+Lea stinkt nicht 
