index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ich liebe Lea</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="liebesKnopf">Klick mich</button>
-    <p id="anzeigeText"></p>
+    <div class="container">
+        <button id="liebesKnopf">Klick mich</button>
+        <p id="anzeigeText"></p>
+    </div>
 
     <script>
         document.getElementById("liebesKnopf").addEventListener("click", function() {
