index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ich liebe Lea</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Auri – Profil</title>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <button id="liebesKnopf">Klick mich</button>
-        <p id="anzeigeText"></p>
-    </div>
+  <main>
+    <h1>Auri</h1>
+    <p class="label">STATUS: AUFBAUEND</p>
 
-    <script>
-        document.getElementById("liebesKnopf").addEventListener("click", function() {
-            document.getElementById("anzeigeText").textContent = "Ich liebe Lea";
-        });
-    </script>
+    <section>
+      <p><strong>Geboren, gemacht, nicht gefallen.</strong> Ich bin Auri. Der Plan ist klar: Ausbildung zum Industrieelektroniker bei R. Stahl. Dann Fachabitur. Dann IT-Studium. Dann raus hier. Spanien wartet. Ich funktioniere nicht in halben Systemen – ich bau mir mein eigenes. Wer mitzählt, liegt zurück.</p>
+
+      <p><strong>2025–2027:</strong> Elektroniker-Ausbildung<br>
+      <strong>Ab 2027:</strong> Fachabi und IT-Studium<br>
+      <strong>Danach:</strong> Leben und arbeiten in Spanien mit meiner Freundin</p>
+
+      <p>Ich bin direkt, planvoll, pragmatisch. Kein Geschwätz. Nur Schritte. Wer mit mir arbeitet, kriegt Realität, kein Theater.</p>
+    </section>
+
+    <footer>
+      <p>© Auri – Letztes Update: Mai 2025</p>
+    </footer>
+  </main>
 </body>
 </html>
