index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="label">STATUS: AUFBAUEND</p>
 
     <section>
-      <p><strong>Geboren, gemacht, nicht gefallen.</strong> Ich bin Auri. Der Plan ist klar: Ausbildung zum Industrieelektroniker bei R. Stahl. Dann Fachabitur. Dann IT-Studium. Dann raus hier. Spanien wartet. Ich funktioniere nicht in halben Systemen – ich bau mir mein eigenes. Wer mitzählt, liegt zurück.</p>
+      <p><strong>Geboren, gemacht, nicht gefallen.</str.</p>
 
       <p><strong>2025–2027:</strong> Elektroniker-Ausbildung<br>
       <strong>Ab 2027:</strong> Fachabi und IT-Studium<br>
