index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Auri – Profil</title>
+  <title>Aury – Profil</title>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,13 +13,13 @@
     <p class="label">STATUS: AUFBAUEND</p>
 
     <section>
-      <p><strong>Geboren, gemacht, nicht gefallen.</str.</p>
+      <p><strong>Owner of Recon Crimelife</str.</p>
 
       <p><strong>2025–2027:</strong> Elektroniker-Ausbildung<br>
       <strong>Ab 2027:</strong> Fachabi und IT-Studium<br>
       <strong>Danach:</strong> Leben und arbeiten in Spanien mit meiner Freundin</p>
 
-      <p>Ich bin direkt, planvoll, pragmatisch. Kein Geschwätz. Nur Schritte. Wer mit mir arbeitet, kriegt Realität, kein Theater.</p>
+      <p> lowk arrogant .</p>
     </section>
 
     <footer>
