index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Aury – Profil</title>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>deinBenutzername</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main>
-    <h1>Auri</h1>
-    <p class="label">STATUS: AUFBAUEND</p>
-
-    <section>
-      <p><strong>Owner of Recon Crimelife</str.</p>
-
-      <p><strong>2025–2027:</strong> Elektroniker-Ausbildung<br>
-      <strong>Ab 2027:</strong> Fachabi und IT-Studium<br>
-      <strong>Danach:</strong> Leben und arbeiten in Spanien mit meiner Freundin</p>
-
-      <p> lowk arrogant .</p>
-    </section>
-
-    <footer>
-      <p>© Auri – Letztes Update: Mai 2025</p>
-    </footer>
-  </main>
+  <div class="card">
+    <h1 class="glow">deinBenutzername</h1>
+    <p class="fade-in">Industrieelektroniker in Ausbildung. Spanien in Sicht.</p>
+    
+    <div class="links fade-in-delay">
+      <a href="https://discord.com/users/DEINEID" target="_blank">Discord-Profil</a>
+      <a href="https://discord.gg/DEINSERVER" target="_blank">Mein Discord-Server</a>
+    </div>
+  </div>
 </body>
 </html>
