index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>deinBenutzername</title>
+  <title>aury</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="card">
-    <h1 class="glow">deinBenutzername</h1>
-    <p class="fade-in">Industrieelektroniker in Ausbildung. Spanien in Sicht.</p>
+    <h1 class="glow">aury</h1>
+    <p class="fade-in">Owner of reconcl.</p>
     
     <div class="links fade-in-delay">
-      <a href="https://discord.com/users/DEINEID" target="_blank">Discord-Profil</a>
-      <a href="https://discord.gg/DEINSERVER" target="_blank">Mein Discord-Server</a>
+      <a href="https://discord.com/users/zetg" target="_blank">Discord-Profil</a>
+      <a href="https://discord.gg/dBTk6yJFSZ" target="_blank">Mein Discord-Server</a>
     </div>
   </div>
 </body>
