--- a/index.html
+++ b/index.html
@@ -18,3 +18,12 @@
   </div>
 </body>
 </html>
+div>
+
+    <div class="spotify-embed fade-in-delay">
+      <!-- Hier kommt dein Spotify Embed rein -->
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/track/4uLU6hMCjMI75M1A2tKUQC?utm_source=generator"
+        width="100%" height="152" frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"></iframe>
