--- a/index.html
+++ b/index.html
@@ -3,29 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>aury</title>
+  <title>DEIN NAME</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="card">
-    <h1 class="glow">aury</h1>
-    <p class="fade-in">Owner of reconcl.</p>
-    
-    <div class="links fade-in-delay">
-      <a href="https://discord.com/users/zetg" target="_blank">Discord-Profil</a>
-      <a href="https://discord.gg/dBTk6yJFSZ" target="_blank">Mein Discord-Server</a>
-    </div>
-  </div>
-</body>
-</html>
-div>
+    <h1 class="glow">AURY</h1> <!-- << DEIN NAME -->
+    <p class="desc">Owner of reconcl.</p> <!-- << DEINE BESCHREIBUNG -->
 
-    <div class="spotify-embed fade-in-delay">
-      <!-- Hier kommt dein Spotify Embed rein -->
+    <div class="links">
+      <a href="https://discord.com/users/DEINE_ID" target="_blank">Discord-Profil</a>
+      <a href="https://discord.gg/DEIN_SERVER" target="_blank">Mein Discord-Server</a>
+    </div>
+
+    <div class="spotify-embed">
+      <!-- << SPOTIFY EMBED AUSTAUSCHEN -->
       <iframe style="border-radius:12px"
         src="https://open.spotify.com/embed/track/4uLU6hMCjMI75M1A2tKUQC?utm_source=generator"
         width="100%" height="152" frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         loading="lazy"></iframe>
-        
-        div>
+    </div>
+  </div>
+</body>
+</html>
