--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="spotify-embed">
       <!-- << SPOTIFY EMBED AUSTAUSCHEN -->
       <iframe style="border-radius:12px"
-        src="https://open.spotify.com/embed/track/4uLU6hMCjMI75M1A2tKUQC?utm_source=generator"
+        src="https://open.spotify.com/playlist/5S7x4nytgbEcNLtWfn79nf?si=8baf17fadc3c410f"
         width="100%" height="152" frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         loading="lazy"></iframe>
