--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="spotify-embed">
       <!-- << SPOTIFY EMBED AUSTAUSCHEN -->
       <iframe style="border-radius:12px"
-        src="https://open.spotify.com/playlist/5S7x4nytgbEcNLtWfn79nf?si=8baf17fadc3c410f"
-        width="100%" height="152" frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"></iframe>
+  src="https://open.spotify.com/embed/track/3jxYBt25X6flONzrYHQYOS?utm_source=generator"
+  width="100%" height="152" frameBorder="0" allowfullscreen=""
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+  loading="lazy"></iframe>
     </div>
   </div>
 </body>
