--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
   loading="lazy"></iframe>
     </div>
+<div id="interactive-bg"></div>
   </div>
 </body>
 </html>
