--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="card">
-    <h1 class="glow">AURY</h1> <!-- << DEIN NAME -->
+    <h1 class="glow">AURI</h1> <!-- << DEIN NAME -->
     <p class="desc">Owner of reconcl.</p> <!-- << DEINE BESCHREIBUNG -->
 
     <div class="links">
