--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DEIN NAME</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AURY</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="card">
+    <canvas id="bg-canvas"></canvas>
+    <div class="card">
     <h1 class="glow">AURY</h1> <!-- << DEIN NAME -->
     <p class="desc">Owner of reconcl.</p> <!-- << DEINE BESCHREIBUNG -->
 
