--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Main Content (initially hidden) -->
     <div id="main-content" class="card blur">
         <h1 class="glow">AURY</h1>
-        <p class="desc">Owner of reconcl.</p>
+        <p class="desc"><3</p>
 
         <div class="links">
             <a href="https://discord.com/users/1099636685467303986" target="_blank">zetg</a>
