--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="links">
             <a href="https://discord.com/users/1099636685467303986" target="_blank">zetg</a>
-            <a href="https://discord.gg/AA6mtkGKWh" target="_blank">Jugendtrum</a>
+            <a href="https://discord.gg/AA6mtkGKWh" target="_blank">recon</a>
         </div>
 
         <div class="spotify-embed">
