--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
         <p class="desc"><3</p>
 
         <div class="links">
-            <a href="https://discord.com/users/1099636685467303986" target="_blank">zetg</a>
+            <a href="https://discord.com/users/1099636685467303986" target="_blank" class="discord-profile">
+                <div class="profile-img">
+                    <img src="avatar.png" alt="Discord Avatar">
+                </div>
+                <div class="profile-info">
+                    <span class="username">aury</span>
+                    <span class="status">owner of reconcl</span>
+                </div>
+            </a>
             <a href="https://discord.gg/AA6mtkGKWh" target="_blank">recon</a>
         </div>
 
