--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p class="desc">Owner of reconcl.</p> <!-- << DEINE BESCHREIBUNG -->
 
     <div class="links">
-      <a href="https://discord.com/users/DEINE_ID" target="_blank">Discord-Profil</a>
-      <a href="https://discord.gg/DEIN_SERVER" target="_blank">Mein Discord-Server</a>
+      <a href="https://discord.com/users/1099636685467303986" target="_blank">zetg</a>
+      <a href="https://discord.gg/AA6mtkGKWh" target="_blank">Jugendtrum</a>
     </div>
 
     <div class="spotify-embed">
