--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
 </head>
 <body>
     <canvas id="bg-canvas"></canvas>
-    <div class="card">
-    <h1 class="glow">AURY</h1> <!-- << DEIN NAME -->
-    <p class="desc">Owner of reconcl.</p> <!-- << DEINE BESCHREIBUNG -->
-
-    <div class="links">
-      <a href="https://discord.com/users/1099636685467303986" target="_blank">zetg</a>
-      <a href="https://discord.gg/AA6mtkGKWh" target="_blank">Jugendtrum</a>
+    
+    <!-- Unlock Screen -->
+    <div id="unlock-screen" class="unlock-screen">
+        <button id="unlock-btn" class="unlock-btn">UNLOCK</button>
     </div>
 
-    <div class="spotify-embed">
-      <!-- << SPOTIFY EMBED AUSTAUSCHEN -->
-      <iframe style="border-radius:12px"
-  src="https://open.spotify.com/embed/track/3jxYBt25X6flONzrYHQYOS?utm_source=generator"
-  width="100%" height="152" frameBorder="0" allowfullscreen=""
-  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-  loading="lazy"></iframe>
+    <!-- Main Content (initially hidden) -->
+    <div id="main-content" class="card blur">
+        <h1 class="glow">AURY</h1>
+        <p class="desc">Owner of reconcl.</p>
+
+        <div class="links">
+            <a href="https://discord.com/users/1099636685467303986" target="_blank">zetg</a>
+            <a href="https://discord.gg/AA6mtkGKWh" target="_blank">Jugendtrum</a>
+        </div>
+
+        <div class="spotify-embed">
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/3jxYBt25X6flONzrYHQYOS?utm_source=generator"
+                width="100%" height="152" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy">
+            </iframe>
+        </div>
     </div>
-<div id="interactive-bg"></div>
-  </div>
-  <script src="background.js"></script>
+    <script src="background.js"></script>
 </body>
 </html>
