--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     
     <!-- Unlock Screen -->
     <div id="unlock-screen" class="unlock-screen">
-        <button id="unlock-btn" class="unlock-btn">UNLOCK</button>
+        <button id="unlock-btn" class="unlock-btn">show me</button>
     </div>
 
-    <!-- Main Content (initially hidden) -->
+    <!-- Main Schwanz (verstecke scheisse) -->
     <div id="main-content" class="card blur">
         <h1 class="glow">AURY</h1>
-        <p class="desc"><3</p>
+        <p class="desc">3</p>
 
         <div class="links">
             <a href="https://discord.com/users/1099636685467303986" target="_blank" class="discord-profile">
@@ -26,10 +26,10 @@
                 </div>
                 <div class="profile-info">
                     <span class="username">aury</span>
-                    <span class="status">owner of reconcl</span>
+                    <span class="status">penis&lt;3</span>
                 </div>
             </a>
-            <a href="https://discord.gg/AA6mtkGKWh" target="_blank">recon</a>
+            <a href="https://discord.gg/AA6mtkGKWh" target="_blank">penis</a>
         </div>
 
         <div class="spotify-embed">
@@ -42,6 +42,6 @@
         </div>
     </div>
     <script src="background.js"></script>
-    <script src="unlock.js"></script>
+    <script src="discord.js"></script>
 </body>
 </html>
