--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <section class="hero">
             <div>
-                <h1>Dein Name</h1>
+                <h1>aury</h1>
                 <p>Entwickler & Designer</p>
             </div>
         </section>
