--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Dein Name - Portfolio</title>
     <link rel="stylesheet" href="../src/styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#8A4FFF">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <div class="container">
