--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <section class="section" id="about">
             <h2>Über Mich</h2>
             <div class="card">
-                <p>Hier kannst du deine Geschichte erzählen...</p>
+                <p>Aury is an up-and-coming music producer from Germany with a focus on German rap and modern pop sounds. From a young age, he developed a strong sense for sound design and vocal processing.
+                
+                </p>
             </div>
         </section>
 
