--- a/index.html
+++ b/index.html
@@ -42,20 +42,19 @@
             <div class="card about-card">
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Als Musikproduzent und Developer verbinde ich zwei Welten: Die kreative Kraft der Musik und die technische Präzision der Programmierung.</p>
-                        <p>Meine Produktionen zeichnen sich durch moderne Sounddesigns und einzigartige Vocal-Bearbeitung aus. Mit über X Jahren Erfahrung in der Musikproduktion habe ich bereits mit verschiedenen Künstlern zusammengearbeitet.</p>
+                        <p>Aury is an up-and-coming music producer from Germany with a focus on German rap and modern pop sounds. From a young age, he developed a strong sense for sound design and vocal processing. Working with professional gear and software like FL Studio, FabFilter, and UAD plugins, Aury is committed to mastering the craft of music production. He is currently pursuing a career as a music producer or audio engineer, continuously improving his skills in mixing, mastering, and sound creation.</p>
                         <div class="stats">
                             <div class="stat-item">
                                 <h4>Releases</h4>
-                                <span>50+</span>
+                                <span>0</span>
                             </div>
                             <div class="stat-item">
                                 <h4>Streams</h4>
-                                <span>1M+</span>
+                                <span>0</span>
                             </div>
                             <div class="stat-item">
                                 <h4>Projekte</h4>
-                                <span>100+</span>
+                                <span>20+</span>
                             </div>
                         </div>
                     </div>
@@ -82,16 +81,14 @@
                     <ul class="skill-list">
                         <li>HTML & CSS</li>
                         <li>JavaScript</li>
-                        <li>React</li>
-                        <li>Node.js</li>
                     </ul>
                 </div>
                 <div class="card skill-card">
                     <i class="fas fa-paint-brush"></i>
                     <h3>Design</h3>
                     <ul class="skill-list">
-                        <li>UI/UX Design</li>
-                        <li>Figma</li>
+                        <li>UI/UX Design (learning)</li>
+                        <li>Figma (learning)</li>
                         <li>Adobe Photoshop</li>
                         <li>Cover Art</li>
                     </ul>
@@ -121,7 +118,7 @@
                     <h3>Lass uns zusammenarbeiten</h3>
                     <p>Du hast ein spannendes Projekt? Schreib mir!</p>
                     <div class="contact-links">
-                        <a href="mailto:deine@email.de" class="btn"><i class="fas fa-envelope"></i> Email</a>
+                        <a href="mailto:auripulina@gmail.com" class="btn"><i class="fas fa-envelope"></i> Email</a>
                         <a href="#" class="btn"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </div>
