--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="subtitle">Music Producer & Developer</p>
                 <div class="social-links">
                     <a href="#" class="social-icon"><i class="fab fa-spotify"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://instagram.com/auritly" class="social-icon"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-soundcloud"></i></a>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                     <p>Du hast ein spannendes Projekt? Schreib mir!</p>
                     <div class="contact-links">
                         <a href="mailto:auripulina@gmail.com" class="btn"><i class="fas fa-envelope"></i> Email</a>
-                        <a href="#" class="btn"><i class="fab fa-instagram"></i> Instagram</a>
+                        <a href="https://instagram.com/auritly" class="btn"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </div>
             </div>
