--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <h1>aury</h1>
                 <p class="subtitle">Music Producer & Developer</p>
                 <div class="social-links">
-                    <a href="#" class="social-icon"><i class="fab fa-spotify"></i></a>
+                    <a href="https://open.spotify.com/artist/DEIN_SPOTIFY_ID" class="social-icon"><i class="fab fa-spotify"></i></a>
                     <a href="https://instagram.com/auritly" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+                    <a href="https://soundcloud.com/DEIN_SOUNDCLOUD_NAME" class="social-icon"><i class="fab fa-soundcloud"></i></a>
                 </div>
             </div>
         </section>
