--- a/index.html
+++ b/index.html
@@ -118,8 +118,13 @@
                     <h3>Lass uns zusammenarbeiten</h3>
                     <p>Du hast ein spannendes Projekt? Schreib mir!</p>
                     <div class="contact-links">
-                        <a href="mailto:auripulina@gmail.com" class="btn"><i class="fas fa-envelope"></i> Email</a>
-                        <a href="https://instagram.com/auritly" class="btn"><i class="fab fa-instagram"></i> Instagram</a>
+                        <!-- Email Link mit korrekter Formatierung und Encoding -->
+                        <a href="mailto:auripulina@gmail.com?subject=Projekt%20Anfrage" class="btn">
+                            <i class="fas fa-envelope"></i> Email
+                        </a>
+                        <a href="https://instagram.com/auritly" target="_blank" class="btn">
+                            <i class="fab fa-instagram"></i> Instagram
+                        </a>
                     </div>
                 </div>
             </div>
