--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
             <p>&copy; 2024 aury. All rights reserved.</p>
         </div>
     </footer>
-    <script src="../src/js/main.js"></script>
+    <script src="src/js/main.js"></script>
 </body>
 </html>
