--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
                     <h3>Let's Work Together</h3>
                     <p>Got an exciting project? Get in touch!</p>
                     
-                    <form id="contactForm" action="https://formspree.io/f/xwpoydnb" method="POST" class="contact-form">
+                    <form id="contactForm" 
+                          action="https://formspree.io/f/xwpoydnb" 
+                          method="POST" 
+                          class="contact-form">
                         <div class="form-group">
                             <label for="email">Your Email</label>
                             <input type="email" id="email" name="email" required>
@@ -154,3 +157,5 @@
         </div>
     </footer>
     <script src="src/js/main.js"></script>
+</body>
+</html>
