--- a/index.html
+++ b/index.html
@@ -101,11 +101,14 @@
             <div class="grid">
                 <div class="card project-card">
                     <div class="project-image">
-                        <img src="path-to-your-image.jpg" alt="Project 1">
+                        <img src="src/images/coming-soon.jpg" alt="Coming Soon">
                     </div>
-                    <h3>Latest Release</h3>
-                    <p>Description of your latest music release</p>
-                    <a href="#" class="btn">Listen on Spotify</a>
+                    <h3>Coming Soon</h3>
+                    <p>First release in progress - stay tuned!</p>
+                    <div class="project-tags">
+                        <span class="tag">German Rap</span>
+                        <span class="tag">Modern Pop</span>
+                    </div>
                 </div>
             </div>
         </section>
